WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191273
Fix typos in closing ENABLE guards
https://bugs.webkit.org/show_bug.cgi?id=191273
Summary
Fix typos in closing ENABLE guards
Don Olmstead
Reported
2018-11-05 11:09:32 PST
There are just some typos in there that I found when grepping ENABLE flags.
Attachments
Patch
(2.68 KB, patch)
2018-11-05 11:15 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2018-11-05 11:15:19 PST
Created
attachment 353891
[details]
Patch
Keith Miller
Comment 2
2018-11-05 11:17:02 PST
Comment on
attachment 353891
[details]
Patch Lol r=me.
Keith Miller
Comment 3
2018-11-05 11:17:57 PST
This is the downside of using the ENABLE macros, where it checks if the value is defined so the compiler doesn't catch these... It's probably not the end of the world though.
Don Olmstead
Comment 4
2018-11-05 11:18:48 PST
(In reply to Keith Miller from
comment #3
)
> This is the downside of using the ENABLE macros, where it checks if the > value is defined so the compiler doesn't catch these... It's probably not > the end of the world though.
These are just in the ending comments. I was grepping in there and I saw the typos.
WebKit Commit Bot
Comment 5
2018-11-05 11:36:02 PST
Comment on
attachment 353891
[details]
Patch Clearing flags on attachment: 353891 Committed
r237823
: <
https://trac.webkit.org/changeset/237823
>
WebKit Commit Bot
Comment 6
2018-11-05 11:36:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-05 11:37:24 PST
<
rdar://problem/45814243
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug