Source/JavaScriptCore/ftl/FTLForOSREntryJITCode.h
@@ -64,4 +64,4 @@ private:
 
 } } // namespace JSC::FTL
 
-#endif // ENABLE(FLT_JIT)
+#endif // ENABLE(FTL_JIT)
