Source/JavaScriptCore/ftl/FTLJITCode.h
@@ -82,4 +82,4 @@ private:
 
 } } // namespace JSC::FTL
 
-#endif // ENABLE(FLT_JIT)
+#endif // ENABLE(FTL_JIT)
