Source/JavaScriptCore/wasm/WasmPageCount.h
@@ -103,4 +103,4 @@ private:
 
 } } // namespace JSC::Wasm
 
-#endif // ENABLE(WASM)
+#endif // ENABLE(WEBASSEMBLY)
